--- a/start/templates/start/Consent.html
+++ b/start/templates/start/Consent.html
@@ -1,15 +1,34 @@
 {% block title %}
-Consent Form
+    Consent Form
 {% endblock %}
 
 {% block content %}
-<h2>Welcome to the experiment</h2>
-<p>
-By continuing, you consent to participate in this study. 
-Your answers will remain anonymous and confidential.
-</p>
 
-<form method="post">
-    <button class="btn btn-primary">I Agree</button>
-</form>
+<div class="card bg-light m-3">
+    <div class="card-body">
+        <h2>Welcome to the experiment</h2>
+        <p>
+            Please read the consent form below.
+        </p>
+
+        <iframe 
+            src="https://docs.google.com/document/d/e/2PACX-1vScFicl5frD_ngkg-gOhlHXLI-hDdAd4Sq4EVy37m7bXF5jZFHFyGsnEebXbJedlq9PJY_PRbGRPuJR/pub?embedded=true" 
+            width="100%" 
+            height="600px" 
+            style="border: 1px solid #ccc;">
+        </iframe>
+
+        <p class="mt-3">
+            By continuing, you consent to participate in this study. 
+            Your answers will remain anonymous and confidential.
+        </p>
+    </div>
+</div>
+
+<div class="text-center">
+    <form method="post">
+        <button class="btn btn-primary btn-lg">I Agree</button>
+    </form>
+</div>
+
 {% endblock %}
